--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="navbar-brand">TheMealDB</a>
             <form class="col-md-6 m-auto py-5">
                 <div class="input-group mb-3">
-                    <input id="searchInput" type="text" class="form-control" placeholder="Enter a search for meal by single text ...">
+                    <input id="searchInput" type="text" class="form-control" placeholder="Enter a search for meal ...">
                     <div class="input-group-append">
                         <button id="search-btn" type="button" class="btn btn-danger">Search</button>
                     </div>
