--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -12,7 +12,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand">TheMealDB</a>
+            <a class="navbar-brand">Food Stall</a>
             <form class="col-md-6 m-auto py-5">
                 <div class="input-group mb-3">
                     <input id="searchInput" type="text" class="form-control" placeholder="Enter a search for meal ...">
@@ -26,6 +26,12 @@
 
 
     <main class="my-5">
+        <!-- spinner -->
+        <div id="spinner" class="d-flex justify-content-center d-none">
+            <div class="spinner-border text-danger" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
         <div id="mealDetails">
             
         </div>
